lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from ParCPP.y
-----------------------------------------------------------------------------

state 195 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp10 -> Exp10                             (12)
	%start_pExp9 -> Exp9                               (13)
	%start_pExp8 -> Exp8                               (14)
	%start_pExp4 -> Exp4                               (15)
	%start_pExp3 -> Exp3                               (16)
	%start_pExp2 -> Exp2                               (17)
	%start_pExp -> Exp                                 (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pListExp -> ListExp                         (23)
	%start_pListString -> ListString                   (24)
	%start_pType -> Type                               (25)
	%start_pListId -> ListId                           (26)
	Double -> L_doubl                                  (27)
	Integer -> L_integ                                 (28)
	String -> L_quoted                                 (29)
	Id -> L_Id                                         (30)
	Program -> ListDef                                 (31)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (32)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (33)
	ListDef ->                                         (34)
	ListDef -> Def ListDef                             (35)
	Arg -> Type Id                                     (36)
	ListArg ->                                         (37)
	ListArg -> Arg                                     (38)
	ListArg -> Arg ',' ListArg                         (39)
	Stm -> Exp ';'                                     (40)
	Stm -> Type ListId ';'                             (41)
	Stm -> Type Id '=' Exp ';'                         (42)
	Stm -> 'return' Exp ';'                            (43)
	Stm -> 'return' ';'                                (44)
	Stm -> 'while' '(' Exp ')' Stm                     (45)
	Stm -> '{' ListStm '}'                             (46)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (47)
	Stm -> 'if' '(' Exp ')' Stm                        (48)
	Stm -> 'typedef' Type Id ';'                       (49)
	Stm -> Exp '?' Stm                                 (50)
	Stm -> Exp '?' Exp ':' Stm                         (51)
	ListStm ->                                         (52)
	ListStm -> Stm ListStm                             (53)
	Exp15 -> 'true'                                    (54)
	Exp15 -> 'false'                                   (55)
	Exp15 -> Integer                                   (56)
	Exp15 -> Double                                    (57)
	Exp15 -> ListString                                (58)
	Exp15 -> Id                                        (59)
	Exp15 -> Id '(' ListExp ')'                        (60)
	Exp15 -> Id '[' Exp ']'                            (61)
	Exp15 -> '(' Exp ')'                               (62)
	Exp14 -> Exp14 '.' Exp15                           (63)
	Exp14 -> Exp15 '++'                                (64)
	Exp14 -> Exp15 '--'                                (65)
	Exp14 -> Exp15                                     (66)
	Exp13 -> '++' Exp14                                (67)
	Exp13 -> '--' Exp14                                (68)
	Exp13 -> Exp14                                     (69)
	Exp12 -> Exp12 '*' Exp13                           (70)
	Exp12 -> Exp12 '%' Exp13                           (71)
	Exp12 -> Exp12 '/' Exp13                           (72)
	Exp12 -> Exp13                                     (73)
	Exp11 -> Exp11 '+' Exp12                           (74)
	Exp11 -> Exp11 '-' Exp12                           (75)
	Exp11 -> Exp12                                     (76)
	Exp10 -> Exp10 '<<' Exp11                          (77)
	Exp10 -> Exp10 '>>' Exp11                          (78)
	Exp10 -> Exp11                                     (79)
	Exp9 -> Exp9 '<' Exp10                             (80)
	Exp9 -> Exp9 '>' Exp10                             (81)
	Exp9 -> Exp9 '<=' Exp10                            (82)
	Exp9 -> Exp9 '>=' Exp10                            (83)
	Exp9 -> Exp10                                      (84)
	Exp8 -> Exp8 '==' Exp9                             (85)
	Exp8 -> Exp8 '!=' Exp9                             (86)
	Exp8 -> Exp9                                       (87)
	Exp4 -> Exp4 '&&' Exp5                             (88)
	Exp4 -> Exp5                                       (89)
	Exp3 -> Exp3 '||' Exp4                             (90)
	Exp3 -> Exp4                                       (91)
	Exp2 -> Exp3 '=' Exp2                              (92)
	Exp2 -> Exp3                                       (93)
	Exp -> Exp1                                        (94)
	Exp1 -> Exp2                                       (95)
	Exp5 -> Exp6                                       (96)
	Exp6 -> Exp7                                       (97)
	Exp7 -> Exp8                                       (98)
	ListExp ->                                         (99)
	ListExp -> Exp                                     (100)
	ListExp -> Exp ',' ListExp                         (101)
	ListString -> String                               (102)
	ListString -> String ListString                    (103)
	Type -> 'bool'                                     (104)
	Type -> 'int'                                      (105)
	Type -> 'double'                                   (106)
	Type -> 'void'                                     (107)
	Type -> 'string'                                   (108)
	Type -> Id                                         (109)
	ListId -> Id                                       (110)
	ListId -> Id ',' ListId                            (111)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'--'           { PT _ (TS _ 11) }
	'.'            { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<<'           { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'>>'           { PT _ (TS _ 23) }
	'?'            { PT _ (TS _ 24) }
	'['            { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'double'       { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'inline'       { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'typedef'      { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp10   rule  12
	%start_pExp9    rule  13
	%start_pExp8    rule  14
	%start_pExp4    rule  15
	%start_pExp3    rule  16
	%start_pExp2    rule  17
	%start_pExp     rule  18
	%start_pExp1    rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pListExp rule  23
	%start_pListString rule  24
	%start_pType    rule  25
	%start_pListId  rule  26
	Double          rule  27
	Integer         rule  28
	String          rule  29
	Id              rule  30
	Program         rule  31
	Def             rules 32, 33
	ListDef         rules 34, 35
	Arg             rule  36
	ListArg         rules 37, 38, 39
	Stm             rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51
	ListStm         rules 52, 53
	Exp15           rules 54, 55, 56, 57, 58, 59, 60, 61, 62
	Exp14           rules 63, 64, 65, 66
	Exp13           rules 67, 68, 69
	Exp12           rules 70, 71, 72, 73
	Exp11           rules 74, 75, 76
	Exp10           rules 77, 78, 79
	Exp9            rules 80, 81, 82, 83, 84
	Exp8            rules 85, 86, 87
	Exp4            rules 88, 89
	Exp3            rules 90, 91
	Exp2            rules 92, 93
	Exp             rule  94
	Exp1            rule  95
	Exp5            rule  96
	Exp6            rule  97
	Exp7            rule  98
	ListExp         rules 99, 100, 101
	ListString      rules 102, 103
	Type            rules 104, 105, 106, 107, 108, 109
	ListId          rules 110, 111

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'inline'       shift, and enter state 103
	'int'          shift, and enter state 36
	'string'       shift, and enter state 37
	'void'         shift, and enter state 38
	L_Id           shift, and enter state 31
	%eof           reduce using rule 34

	Id             goto state 32
	Program        goto state 105
	Def            goto state 100
	ListDef        goto state 106
	Type           goto state 102

State 1

	%start_pDef -> . Def                                (rule 1)

	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'inline'       shift, and enter state 103
	'int'          shift, and enter state 36
	'string'       shift, and enter state 37
	'void'         shift, and enter state 38
	L_Id           shift, and enter state 31

	Id             goto state 32
	Def            goto state 104
	Type           goto state 102

State 2

	%start_pListDef -> . ListDef                        (rule 2)

	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'inline'       shift, and enter state 103
	'int'          shift, and enter state 36
	'string'       shift, and enter state 37
	'void'         shift, and enter state 38
	L_Id           shift, and enter state 31
	%eof           reduce using rule 34

	Id             goto state 32
	Def            goto state 100
	ListDef        goto state 101
	Type           goto state 102

State 3

	%start_pArg -> . Arg                                (rule 3)

	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'int'          shift, and enter state 36
	'string'       shift, and enter state 37
	'void'         shift, and enter state 38
	L_Id           shift, and enter state 31

	Id             goto state 32
	Arg            goto state 99
	Type           goto state 98

State 4

	%start_pListArg -> . ListArg                        (rule 4)

	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'int'          shift, and enter state 36
	'string'       shift, and enter state 37
	'void'         shift, and enter state 38
	L_Id           shift, and enter state 31
	%eof           reduce using rule 37

	Id             goto state 32
	Arg            goto state 96
	ListArg        goto state 97
	Type           goto state 98

State 5

	%start_pStm -> . Stm                                (rule 5)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'false'        shift, and enter state 66
	'if'           shift, and enter state 90
	'int'          shift, and enter state 36
	'return'       shift, and enter state 91
	'string'       shift, and enter state 37
	'true'         shift, and enter state 67
	'typedef'      shift, and enter state 92
	'void'         shift, and enter state 38
	'while'        shift, and enter state 93
	'{'            shift, and enter state 94
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 85
	Stm            goto state 95
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 52
	Exp4           goto state 53
	Exp3           goto state 54
	Exp2           goto state 55
	Exp            goto state 88
	Exp1           goto state 57
	Exp5           goto state 58
	Exp6           goto state 59
	Exp7           goto state 60
	ListString     goto state 62
	Type           goto state 89

State 6

	%start_pListStm -> . ListStm                        (rule 6)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'false'        shift, and enter state 66
	'if'           shift, and enter state 90
	'int'          shift, and enter state 36
	'return'       shift, and enter state 91
	'string'       shift, and enter state 37
	'true'         shift, and enter state 67
	'typedef'      shift, and enter state 92
	'void'         shift, and enter state 38
	'while'        shift, and enter state 93
	'{'            shift, and enter state 94
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31
	%eof           reduce using rule 52

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 85
	Stm            goto state 86
	ListStm        goto state 87
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 52
	Exp4           goto state 53
	Exp3           goto state 54
	Exp2           goto state 55
	Exp            goto state 88
	Exp1           goto state 57
	Exp5           goto state 58
	Exp6           goto state 59
	Exp7           goto state 60
	ListString     goto state 62
	Type           goto state 89

State 7

	%start_pExp15 -> . Exp15                            (rule 7)

	'('            shift, and enter state 63
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 84
	ListString     goto state 62

State 8

	%start_pExp14 -> . Exp14                            (rule 8)

	'('            shift, and enter state 63
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 83
	ListString     goto state 62

State 9

	%start_pExp13 -> . Exp13                            (rule 9)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 82
	ListString     goto state 62

State 10

	%start_pExp12 -> . Exp12                            (rule 10)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 81
	ListString     goto state 62

State 11

	%start_pExp11 -> . Exp11                            (rule 11)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 80
	ListString     goto state 62

State 12

	%start_pExp10 -> . Exp10                            (rule 12)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 79
	ListString     goto state 62

State 13

	%start_pExp9 -> . Exp9                              (rule 13)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 78
	ListString     goto state 62

State 14

	%start_pExp8 -> . Exp8                              (rule 14)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 77
	ListString     goto state 62

State 15

	%start_pExp4 -> . Exp4                              (rule 15)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 52
	Exp4           goto state 76
	Exp5           goto state 58
	Exp6           goto state 59
	Exp7           goto state 60
	ListString     goto state 62

State 16

	%start_pExp3 -> . Exp3                              (rule 16)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 52
	Exp4           goto state 53
	Exp3           goto state 75
	Exp5           goto state 58
	Exp6           goto state 59
	Exp7           goto state 60
	ListString     goto state 62

State 17

	%start_pExp2 -> . Exp2                              (rule 17)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 52
	Exp4           goto state 53
	Exp3           goto state 54
	Exp2           goto state 74
	Exp5           goto state 58
	Exp6           goto state 59
	Exp7           goto state 60
	ListString     goto state 62

State 18

	%start_pExp -> . Exp                                (rule 18)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31

	Double         goto state 42
	Integer        goto state 43
	String         goto state 39
	Id             goto state 44
	Exp15          goto state 45
	Exp14          goto state 46
	Exp13          goto state 47
	Exp12          goto state 48
	Exp11          goto state 49
	Exp10          goto state 50
	Exp9           goto state 51
	Exp8           goto state 52
	Exp4           goto state 53
	Exp3           goto state 54
	Exp2           goto state 55
	Exp            goto state 73
	Exp1           goto state 57
	Exp5           goto state 58
	Exp6           goto state 59
	Exp7           goto state 60
	ListString     goto state 62

State 19

	%start_pExp1 -> . Exp1                              (rule 19)

	'('            shift, and enter state 63
	'++'           shift, and enter state 64
	'--'           shift, and enter state 65
	'false'        shift, and enter state 66
	'true'         shift, and enter state 67
	L_doubl        shift, and enter state 28
	L_integ        shift, and enter state 68
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 31
